@@ -594,6 +594,74 @@ static void CAPTURE_AddAviChunk(const char * tag, uint32_t size, void * data, ui
 }
 #endif
 
+#if defined(USE_TTF)
+extern int switchoutput;
+extern bool resetreq;
+bool Direct3D_using(void);
+void resetFontSize(), OUTPUT_TTF_Select(int fsize), RENDER_Reset(void), KEYBOARD_Clear(void), change_output(int output);
+bool ttfswitch=false;
+
+void ttf_switch_off() {
+    if (ttf.inUse) {
+        std::string output="surface";
+        int out=switchoutput;
+        if (switchoutput==0)
+            output = "surface";
+#if C_OPENGL
+        else if (switchoutput==3)
+            output = "opengl";
+        else if (switchoutput==4)
+            output = "openglnb";
+#endif
+#if C_DIRECT3D
+        else if (switchoutput==5)
+            output = "direct3d";
+#endif
+        else {
+#if C_DIRECT3D
+            out = 5;
+            output = "direct3d";
+#elif C_OPENGL
+            out = 3;
+            output = "opengl";
+#else
+            out = 0;
+            output = "surface";
+#endif
+        }
+        KEYBOARD_Clear();
+        change_output(out);
+        SetVal("sdl", "output", output);
+        void OutputSettingMenuUpdate(void);
+        OutputSettingMenuUpdate();
+        ttfswitch = true;
+        //if (GFX_IsFullscreen()) GFX_SwitchFullscreenNoReset();
+        mainMenu.get_item("output_ttf").enable(false).refresh_item(mainMenu);
+        RENDER_Reset();
+    }
+}
+
+void ttf_switch_on() {
+    if (ttfswitch && !(CaptureState & CAPTURE_IMAGE) && !(CaptureState & CAPTURE_VIDEO)) {
+#if C_DIRECT3D
+        if (Direct3D_using()) change_output(0);
+#endif
+        change_output(10);
+        SetVal("sdl", "output", "ttf");
+        void OutputSettingMenuUpdate(void);
+        OutputSettingMenuUpdate();
+        ttfswitch = false;
+        mainMenu.get_item("output_ttf").enable(true).refresh_item(mainMenu);
+        if (ttf.fullScrn) {
+            if (!GFX_IsFullscreen()) GFX_SwitchFullscreenNoReset();
+            OUTPUT_TTF_Select(2);
+            resetreq = true;
+        }
+        resetFontSize();
+    }
+}
+#endif
+
 #if (C_SSHOT)
 void CAPTURE_VideoEvent(bool pressed) {
 	if (!pressed)
@@ -631,8 +699,14 @@ void CAPTURE_VideoEvent(bool pressed) {
 			delete capture.video.codec;
 			capture.video.codec = NULL;
 		}
+#if defined(USE_TTF)
+        ttf_switch_on();
+#endif
 	} else {
 		CaptureState |= CAPTURE_VIDEO;
+#if defined(USE_TTF)
+        ttf_switch_off();
+#endif
 	}
 
 	mainMenu.get_item("mapper_video").check(!!(CaptureState & CAPTURE_VIDEO)).refresh_item(mainMenu);
@@ -1416,7 +1490,10 @@ skip_shot:
         mainMenu.get_item("mapper_video").check(!!(CaptureState & CAPTURE_VIDEO)).refresh_item(mainMenu);
     }
 
-	return;
+#if defined(USE_TTF)
+    ttf_switch_on();
+#endif
+    return;
 skip_video:
 	capture.video.writer = avi_writer_destroy(capture.video.writer);
 # if (C_AVCODEC)
@@ -1424,9 +1501,11 @@ skip_video:
 	ffmpeg_closeall();
 # endif
 #endif
+#if defined(USE_TTF)
+    ttf_switch_on();
+#endif
 	return;
 }
-
 
 #if (C_SSHOT)
 void CAPTURE_ScreenShotEvent(bool pressed) {
@@ -1434,6 +1513,9 @@ void CAPTURE_ScreenShotEvent(bool pressed) {
 		return;
 #if !defined(C_EMSCRIPTEN)
 	CaptureState |= CAPTURE_IMAGE;
+#endif
+#if defined(USE_TTF)
+    ttf_switch_off();
 #endif
 }
 #endif
